--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
